migrating groovy to kotlin

--- a/app/src/main/res/layout/widget_video.xml
+++ b/app/src/main/res/layout/widget_video.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.themovieviewer.domain.model.Trailer" />
+            type="com.themovieviewer.core.model.data.Trailer" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="200dp"
