--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -8,7 +8,7 @@
             type="com.themovieviewer.presentation.ui.moviedetails.MovieDetailsFragment" />
         <variable
             name="viewModel"
-            type="com.themovieviewer.domain.model.MovieDetail" />
+            type="com.themovieviewer.core.model.data.MovieDetail" />
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
