--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.themovieviewer.domain.model.People" />
+            type="com.themovieviewer.core.model.data.People" />
     </data>
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
