--- a/app/src/main/res/layout/widget_movie_main_horizontal.xml
+++ b/app/src/main/res/layout/widget_movie_main_horizontal.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.themovieviewer.domain.model.Movie" />
+            type="com.themovieviewer.core.model.data.Movie" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@android:color/white"
