--- a/app/src/main/res/layout/widget_people_acting.xml
+++ b/app/src/main/res/layout/widget_people_acting.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.themovieviewer.domain.model.CastCrew" />
+            type="com.themovieviewer.core.model.data.CastCrew" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
