--- a/app/src/main/res/layout/widget_credits_vertical.xml
+++ b/app/src/main/res/layout/widget_credits_vertical.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="model"
-            type="com.themovieviewer.network.model.CreditsCastCrewDto" />
+            type="com.themovieviewer.core.data.network.model.CreditsCastCrewDto" />
     </data>
     <androidx.constraintlayout.widget.ConstraintLayout
         android:background="@android:color/white"
